--- a/kernel/memory/3. zone初始化.md
+++ b/kernel/memory/3. zone初始化.md
@@ -296,6 +296,20 @@ zone的初始化函数集中在`bootmem_init()`中完成，所以需要确定每
 
 另外ZONE_NORMAL的虚拟地址的结束地址是0xef800000，减去PAGE_OFFSET(0xc0000000)，再加上PHY_OFFSET(0x60000000)，正好等于0x8f800000，这个值等于我们之前计算出的arm_lowmem_init。
 
+> PHYS_OFFSET为由于Vexpress的RAM起始地址映射在0x60000000。所以要加上这一部分。
+
+```static inline phys_addr_t __virt_to_phys(unsigned long x)
+static inline phys_addr_t __virt_to_phys(unsigned long x)
+{
+    return (phys_addr_t)x - PAGE_OFFSET + PHYS_OFFSET;
+}
+
+static inline unsigned long __phys_to_virt(phys_addr_t x)
+{
+    return x - PHYS_OFFSET + PAGE_OFFSET;
+}
+```
+
 ZONE_NORMAL大小760MB，从0xc0000000 - 0xef800000，ZONE_HIGHMEM大小264MB，从0xef800000 - 0xffffffff。
 
 ZONE_HIGHMEM并不等同于vmalloc，还有8MB hole和末尾16MB空间。所以vmalloc=264-8-16=240MB。
