--- a/kernel/memory/3. zone初始化.md
+++ b/kernel/memory/3. zone初始化.md
@@ -314,3 +314,21 @@ ZONE_NORMAL大小760MB，从0xc0000000 - 0xef800000，ZONE_HIGHMEM大小264MB，
 
 ZONE_HIGHMEM并不等同于vmalloc，还有8MB hole和末尾16MB空间。所以vmalloc=264-8-16=240MB。
 
+
+
+zone的初始化在free_area_init_core()中：
+
+```
+start_kernel	-->
+​	setup_arch	-->
+​		paging_init	-->
+​			bootmem_init	-->
+				zone_sizes_init	-->
+					free_area_init_node	-->
+						free_area_init_core
+```
+
+
+
+​			
+
