修改图片链接

--- a/kernel/memory/3. zone初始化.md
+++ b/kernel/memory/3. zone初始化.md
@@ -286,7 +286,7 @@ zone的初始化函数集中在`bootmem_init()`中完成，所以需要确定每
 
 下面是ARM Vexpress平台运行之后的打印出来的zone信息：
 
-![zone信息图](/picture/zone信息图.png)
+![zone信息图](./picture/zone信息图.png)
 
 可以看出ARM Vexpress平台分为两个zone，ZONE_NORMAL和ZONE_HIGHMEM。其中ZONE_NORMAL是从0xc0000000到0xef800000，这个地址空间有多少页面呢？
 
