zone初始化更新

--- a/kernel/memory/3. zone初始化.md
+++ b/kernel/memory/3. zone初始化.md
@@ -328,7 +328,177 @@ start_kernel	-->
 						free_area_init_core
 ```
 
+```/*
+ * Set up the zone data structures:
+ *   - mark all pages reserved
+ *   - mark all memory queues empty
+ *   - clear the memory bitmaps
+ *
+ * NOTE: pgdat should get zeroed by caller.
+ */
+static void __paginginit free_area_init_core(struct pglist_data *pgdat,
+		unsigned long node_start_pfn, unsigned long node_end_pfn,
+		unsigned long *zones_size, unsigned long *zholes_size)
+{
+	enum zone_type j;
+	int nid = pgdat->node_id;
+	unsigned long zone_start_pfn = pgdat->node_start_pfn;
+	int ret;
 
+	pgdat_resize_init(pgdat);
+#ifdef CONFIG_NUMA_BALANCING
+	spin_lock_init(&pgdat->numabalancing_migrate_lock);
+	pgdat->numabalancing_migrate_nr_pages = 0;
+	pgdat->numabalancing_migrate_next_window = jiffies;
+#endif
+	//初始化内存节点的内存置换等待队列。
+	init_waitqueue_head(&pgdat->kswapd_wait);
+	//pfmemalloc_wait等待队列是用来由kswapd唤醒后进行内存分配的
+	init_waitqueue_head(&pgdat->pfmemalloc_wait);
+	pgdat_page_ext_init(pgdat);
 
-​			
+	/* 遍历每个管理区 */
+	for (j = 0; j < MAX_NR_ZONES; j++) {
+		struct zone *zone = pgdat->node_zones + j;
+		unsigned long size, realsize, freesize, memmap_pages;
+		/*  size为该管理区中的页框数，包括洞，该函数计算区域的的包含的页面数，包含旁边可能存在的空泛。计算区域总页面数要斟酌两个因数： */
+		size = zone_spanned_pages_in_node(nid, j, node_start_pfn,
+						  node_end_pfn, zones_size);
+		 /* realsize为管理区中的页框数，不包括洞  /
+		realsize = freesize = size - zone_absent_pages_in_node(nid, j,
+								node_start_pfn,
+								node_end_pfn,
+								zholes_size);
 
+		/*
+		 * Adjust freesize so that it accounts for how much memory
+		 * is used by this zone for memmap. This affects the watermark
+		 * and per-cpu initialisations
+		 * 调整realsize的大小，即减去page结构体占用的内存大小 
+		 */
+		 // memmap_pags为包括洞的所有页框的page结构体所占的大小
+		memmap_pages = calc_memmap_size(size, realsize);
+		if (!is_highmem_idx(j)) {
+			if (freesize >= memmap_pages) {
+				freesize -= memmap_pages;
+				if (memmap_pages)
+					printk(KERN_DEBUG
+					       "  %s zone: %lu pages used for memmap\n",
+					       zone_names[j], memmap_pages);
+			} else /*  内存不够存放page结构体  */
+				printk(KERN_WARNING
+					"  %s zone: %lu pages exceeds freesize %lu\n",
+					zone_names[j], memmap_pages, freesize);
+		}
+
+		/* Account for reserved pages */
+		//调整realsize的大小，即减去DMA保留页的大小
+		if (j == 0 && freesize > dma_reserve) {
+			freesize -= dma_reserve;
+			printk(KERN_DEBUG "  %s zone: %lu pages reserved\n",
+					zone_names[0], dma_reserve);
+		}
+		//HIGHMEM不计算映射耗费page数目
+		if (!is_highmem_idx(j))
+			nr_kernel_pages += freesize;
+		/* Charge for highmem memmap if there are enough kernel pages */
+		else if (nr_kernel_pages > memmap_pages * 2)
+			nr_kernel_pages -= memmap_pages;
+		nr_all_pages += freesize;
+
+		zone->spanned_pages = size;
+		zone->present_pages = realsize;
+		/*
+		 * Set an approximate value for lowmem here, it will be adjusted
+		 * when the bootmem allocator frees pages into the buddy system.
+		 * And all highmem pages will be managed by the buddy system.
+		 */
+		  /* 设置zone->spanned_pages为包括洞的页框数  */
+		zone->managed_pages = is_highmem_idx(j) ? realsize : freesize;
+#ifdef CONFIG_NUMA
+		/* 设置zone中的节点标识符 */
+		zone->node = nid;
+		 /* 设置可回收页面比率 */
+		zone->min_unmapped_pages = (freesize*sysctl_min_unmapped_ratio)
+						/ 100;
+		/* 设置slab回收缓存页的比率 */
+		zone->min_slab_pages = (freesize * sysctl_min_slab_ratio) / 100;
+#endif
+		 /*  设置zone的名称  */
+		zone->name = zone_names[j];
+		/* 初始化各种锁 */
+		spin_lock_init(&zone->lock);
+		spin_lock_init(&zone->lru_lock);
+		zone_seqlock_init(zone);
+		/* 设置管理区属于的节点对应的pg_data_t结构 */
+		zone->zone_pgdat = pgdat;
+		 /* 初始化cpu的页面缓存 */
+		zone_pcp_init(zone);
+
+		/* For bootup, initialized properly in watermark setup */
+		mod_zone_page_state(zone, NR_ALLOC_BATCH, zone->managed_pages);
+
+		/* 初始化lru相关成员 */
+		lruvec_init(&zone->lruvec);
+		if (!size)
+			continue;
+
+		set_pageblock_order();
+		/* 定义了CONFIG_SPARSEMEM该函数为空 */
+		setup_usemap(pgdat, zone, zone_start_pfn, size);
+		/* 设置pgdat->nr_zones和zone->zone_start_pfn成员
+         * 初始化zone->free_area成员
+         * 初始化zone->wait_table相关成员
+         */
+		ret = init_currently_empty_zone(zone, zone_start_pfn,
+						size, MEMMAP_EARLY);
+		BUG_ON(ret);
+		 /* 初始化该zone对应的page结构 */
+		memmap_init(size, nid, j, zone_start_pfn);
+		zone_start_pfn += size;
+	}
+}
+```
+
+另外系统中会有一个zonelist的数据结构，伙伴系统分配器会从zonelist开始分配内存，zonelist有一个zoneref数组，数组里有一个成员会指向zone数据结构。zoneref数组的第一个成员指向的zone是页面分配器的第一个候选者，其他成员则是第一个候选者分配失败之后才考虑，优先级逐渐减低，zonelist的初始化路径如下：
+
+```
+start_kernel->build_all_zonelists
+				->	build_all_zonelists_init
+					-> __build_all_zonelists
+						-> build_zonelists
+							->	build_zonelists_node
+```
+
+```/*
+ * Builds allocation fallback zone lists.
+ *
+ * Add all populated zones of a node to the zonelist.
+ */
+static int build_zonelists_node(pg_data_t *pgdat, struct zonelist *zonelist,
+				int nr_zones)
+{
+	struct zone *zone;
+	enum zone_type zone_type = MAX_NR_ZONES;
+
+	do {
+		zone_type--;
+		zone = pgdat->node_zones + zone_type;
+		if (populated_zone(zone)) {
+			zoneref_set_zone(zone,
+				&zonelist->_zonerefs[nr_zones++]);
+			check_highest_zone(zone_type);
+		}
+	} while (zone_type);
+
+	return nr_zones;
+}
+```
+
+这里从最高的MAX_NR_ZONES的zone开始，设置到_zonerefs[0]数组中。在ARM Vexpress平台上，该函数的运行结果如下：
+
+> HighMem		_zonerefs[0]->zone_index=1
+>
+> Normal			_zonerefs[1]->zone_index=0
+
+另外，系统中还有一个非常重要的全局变量-mem_map，它是一个struct page的数组，可以实现快速的把虚拟地址映射到物理地址中，这里指的是内核地址的线性映射，它的初始化是在free_area_init_node()->alloc_node_mem_map()函数中；
