--- a/kernel/memory/5. 物理内存初始化.md
+++ b/kernel/memory/5. 物理内存初始化.md
@@ -1,3 +1,7 @@
+---
+typora-root-url: picture
+---
+
 在内核启动时，内核知道物理内存DDR大小并且计算出高端内存的起始地址和内核空间的内存布局后，物理内存页面就要加入到伙伴系统中，那么物理内存页面如何增加到伙伴系统中呢？
 
 伙伴系统(Buddy System)是操作系统中最常用的一种动态存储管理方法，在用户提出申请时，分配一块大小合适的内存块给用户，反之在用户释放内存块时回收。在伙伴系统中，内存块时2的order次幂。Linux内核中order的最大值用MAX_ORDER来表示，通过是11个内存块链表，每个内存块链表分别包括1、2、4、8、16、32、...、1024个连续页面。1024个页面对应着4MB大小的连续物理内存；
@@ -459,4 +463,98 @@ void set_pfnblock_flags_mask(struct page *page, unsigned long flags,
 ```
 
 下面我们来思考，物理页面是如何加入伙伴系统的？是一页一页增加的，还是以2的几次幂来加入的？
+
+在free_low_memory_core_early()函数中，通过for_each_free_mem_range()函数来遍历所有的memblock内存块，找出内存块的起始地址和结束地址。
+
+```
+start_kernel	-->
+	mm_init	-->
+		mem_init	-->
+			free_all_bootmem	-->
+				free_low_memory_core_early
+```
+
+```
+static unsigned long __init free_low_memory_core_early(void)
+{
+	unsigned long count = 0;
+	phys_addr_t start, end;
+	u64 i;
+
+	memblock_clear_hotplug(0, -1);
+
+	for_each_free_mem_range(i, NUMA_NO_NODE, &start, &end, NULL)
+		count += __free_memory_core(start, end);
+
+#ifdef CONFIG_ARCH_DISCARD_MEMBLOCK
+	{
+		phys_addr_t size;
+
+		/* Free memblock.reserved array if it was allocated */
+		size = get_allocated_memblock_reserved_regions_info(&start);
+		if (size)
+			count += __free_memory_core(start, start + size);
+
+		/* Free memblock.memory array if it was allocated */
+		size = get_allocated_memblock_memory_regions_info(&start);
+		if (size)
+			count += __free_memory_core(start, start + size);
+	}
+#endif
+
+	return count;
+}
+```
+
+把内存块传递到__free_page_memory()函数中，该函数的定义如下：
+
+```
+static void __init __free_pages_memory(unsigned long start, unsigned long end)
+{
+	int order;
+
+	while (start < end) {
+		order = min(MAX_ORDER - 1UL, __ffs(start));
+
+		while (start + (1UL << order) > end)
+			order--;
+
+		__free_pages_bootmem(pfn_to_page(start), order);
+
+		start += (1UL << order);
+	}
+}
+```
+
+注意这里参数start和end指页帧号，while循环一直从起始页帧号start遍历到end，循环的步长和order有关。首先计算order的大小，取MAX_ORDER-1和__ffs(start)的最小值。ffs(start)函数计算start中的第一个bit 为1的位置，注意 `__ffs(start)`=ffs()-1。因为伙伴系统的链表都是2的n次幂，最大链表是2的10次方，也就是1024，即0x400.所以，通过ffs()函数可以很方便的计算出地址的对齐边界。例如start等于0x63300，那么__ffs(0x63300)等于8，那么这里的order选用8；
+
+得到order值后，我们就可以把这块内存通过__free_pages_bootmem()函数添加到伙伴系统了。
+
+```
+void __init __free_pages_bootmem(struct page *page, unsigned int order)
+{
+	unsigned int nr_pages = 1 << order;
+	struct page *p = page;
+	unsigned int loop;
+
+	prefetchw(p);
+	for (loop = 0; loop < (nr_pages - 1); loop++, p++) {
+		prefetchw(p + 1);
+		__ClearPageReserved(p);
+		set_page_count(p, 0);
+	}
+	__ClearPageReserved(p);
+	set_page_count(p, 0);
+
+	page_zone(page)->managed_pages += nr_pages;
+	set_page_refcounted(page);
+	__free_pages(page, order);
+}
+```
+
+__free_pages()函数是伙伴系统的核心函数，这里按照order的方式添加到伙伴系统中，该函数之后会详细介绍；
+
+下面是向系统添加一段内存的情况，页帧号范围为[0x8800e, 0xaecea]，以start为起始来计算其order，一开始order的数值还比较混乱，等到start和0x400对齐，以后基本上order都取值为10了，也就是都挂在order为10 的free_list链表
+
+![伙伴系统挂载情况](/伙伴系统挂载情况.png)中。
 
