--- a/kernel/memory/1. 物理内存初始化/5. 物理内存初始化.md
+++ b/kernel/memory/1. 物理内存初始化/5. 物理内存初始化.md
@@ -10,7 +10,7 @@ typora-root-url: picture
 
 伙伴系统的空闲页块如图2.2所示，zone的数据结构中有一个free_area数组，数组大小是MAX_ORDER。free_area数据结构中包含了MIGRATE_TYPE个链表，这里相当于zone中根据order的大小有0到MAX_ORDER-1个free_area，每个free_area根据MIGRATE_TYPES类型有几个相应的链表。
 
-![伙伴系统的空闲页块管理](.\picture\伙伴系统的空闲页块管理.png)
+![伙伴系统的空闲页块管理](/../../picture/伙伴系统的空闲页块管理.png)
 
 ```
 [include/linux/mmzone.h]
@@ -554,7 +554,7 @@ void __init __free_pages_bootmem(struct page *page, unsigned int order)
 
 __free_pages()函数是伙伴系统的核心函数，这里按照order的方式添加到伙伴系统中，该函数之后会详细介绍；
 
-下面是向系统添加一段内存的情况，页帧号范围为[0x8800e, 0xaecea]，以start为起始来计算其order，一开始order的数值还比较混乱，等到start和0x400对齐，以后基本上order都取值为10了，也就是都挂在order为10 的free_list链表
+下面是向系统添加一段内存的情况，页帧号范围为[0x8800e, 0xaecea]，以start为起始来计算其order，一开始order的数值还比较混乱，等到start和0x400对齐，以后基本上order都取值为10了，也就是都挂在order为10 的free_list链表中。
 
-![伙伴系统挂载情况](/伙伴系统挂载情况.png)中。
+![](/../../picture/伙伴系统挂载情况.png)
 
