--- a/kernel/memory/1. 物理内存初始化/4. 空间划分.md
+++ b/kernel/memory/1. 物理内存初始化/4. 空间划分.md
@@ -22,7 +22,7 @@ choice
 endchoice
 ```
 
-在ARM L奴性中有一个配置选项"memory split"，可以用于调整内核空间和用户空间大小划分。通常使用"VMSPLIT_3G"选项，用户空间大小是3GB，内核空间大小是1GB，那么PAGE_OFFSET描述的内核空间偏移量就是0xC000_0000。也可以选择"VMSPLIT_2G"选项，这是内核空间和用户空间大小都是0x8000_0000（2G）
+在ARM L性中有一个配置选项"memory split"，可以用于调整内核空间和用户空间大小划分。通常使用"VMSPLIT_3G"选项，用户空间大小是3GB，内核空间大小是1GB，那么PAGE_OFFSET描述的内核空间偏移量就是0xC000_0000。也可以选择"VMSPLIT_2G"选项，这是内核空间和用户空间大小都是0x8000_0000（2G）
 
 
 
